# foglamp-omf-poc

./: README.rst
C/common/: http_sender.cpp  omf.cpp  reading.cpp  simple_http.cpp  simple_https.cpp
C/common/include/: datapoint.h  http_sender.h  omf.h  reading.h  simple_http.h  simple_https.h
C/services/north/: CMakeLists.txt  omf_demo.cpp
C/services/south/: CMakeLists.txt  ingest.cpp  south.cpp
C/services/south/include/: ingest.h
mbedos/omf-demo/: easy-connect.lib  mbed_app.json  mbedtls_entropy_config.h
mbedos/omf-demo/source/: datapoint.h  http_sender.cpp  http_sender.h  mbed_https.cpp  mbed_https.h  omf.cpp  omf.h  omf_demo.cpp  reading.cpp  reading.h
mbedos/omf-stream/: easy-connect.lib
